force-app/main/default/objects/Cart__c/Cart__c.object-meta.xml
<CustomObject>
    <label>Cart</label>
    <nameField>
        <displayFormat>CT - {00000}</displayFormat>
        <label>Cart No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>