force-app/main/default/objects/Cart__c/fields/Check_Address_filled__c.field-meta.xml
<CustomField>
    <fullName>Check_Address_filled__c</fullName>
    <formula>TEXT(IF( 
OR(ISBLANK( Deals__r.Billing_Address__City__s ) ,
ISBLANK(Deals__r.Billing_Address__Street__s ),
ISBLANK( TEXT(Deals__r.Billing_Address__CountryCode__s) ),
ISBLANK( TEXT(Deals__r.Billing_Address__StateCode__s) )
) ,
 1, 
0
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Address filled</label>
    <type>Text</type>
</CustomField>