force-app/main/default/objects/Cart__c/fields/Deals__c.field-meta.xml
<CustomField>
    <fullName>Deals__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deals</label>
    <referenceTo>Deals__c</referenceTo>
    <relationshipLabel>Carts</relationshipLabel>
    <relationshipName>Carts</relationshipName>
    <type>Lookup</type>
</CustomField>