force-app/main/default/objects/Cart__c/fields/Loading_Charge__c.field-meta.xml
<CustomField>
    <fullName>Loading_Charge__c</fullName>
    <label>Loading Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>