force-app/main/default/objects/Cart__c/fields/Total_Amount1__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount1__c</fullName>
    <formula>Total_Amount__c  +  Freight_Charge__c  +  Unloading_Charge__c  +  Loading_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>