force-app/main/default/objects/Cart__c/listViews/BATHING_SOLUTIONS_Cart.listView-meta.xml
<ListView>
    <fullName>BATHING_SOLUTIONS_Cart</fullName>
    <filterScope>Queue</filterScope>
    <label>BATHING SOLUTIONS</label>
    <queue>BATHING_SOLUTIONS</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>