force-app/main/default/objects/Cart__c/listViews/BUDGET_BUY_Cart.listView-meta.xml
<ListView>
    <fullName>BUDGET_BUY_Cart</fullName>
    <filterScope>Queue</filterScope>
    <label>BUDGET BUY</label>
    <queue>BUDGET_BUY</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>