force-app/main/default/objects/Cart__c/listViews/HO_Cart.listView-meta.xml
<ListView>
    <fullName>HO_Cart</fullName>
    <filterScope>Queue</filterScope>
    <label>HO</label>
    <queue>HO</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>