force-app/main/default/objects/Cart__c/listViews/NSD_Cart.listView-meta.xml
<ListView>
    <fullName>NSD_Cart</fullName>
    <filterScope>Queue</filterScope>
    <label>NSD</label>
    <queue>NSD</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>