force-app/main/default/objects/Cart__c/listViews/VENGERI_Cart.listView-meta.xml
<ListView>
    <fullName>VENGERI_Cart</fullName>
    <filterScope>Queue</filterScope>
    <label>VENGERI</label>
    <queue>VENGERI</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>